# pixiv-simple-crawl

./: .gitignore  README.MD  get_setu.py  main.py  pyproject.toml
