[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "wenqi", email = "459614950@qq.com"},
]
dependencies = [
    "cloudscraper>=1.2.69",
    "fake-useragent>=1.1.3",
    "requests[socks]>=2.28.2",
    "pymysql>=1.0.3",
    "mysqlclient>=2.1.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}
